
2022-03-29  Nicolas Berthier <nicolas.berther@ocamlpro.com>

	* testsuite.src/syn_copy.at: test partial replacing with SPACES
	  figurative constant

2022-01-25  Nicolas Berthier <nicolas.berther@ocamlpro.com>

	* testsuite.src/syn_copy.at: test partial replacing with literal

2022-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite_manual.at [MANUAL_CHECK]: new macro for running every
	  manual test, executes the test runner, passing the test description
	  from the testsuite
	* testsuite.src/run_manual_screen.at: use of MANUAL_CHECK instead of
	  AC_CHECK, use COBRUN_DIRECT for running the tests with additional tools
	* run_prog_manual.sh.in: use DESC as title for the terminal;
	  also use title for running with GNU screen (by default NOT visible)

2021-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in: added option to test from MSYS
	  which starts a detached cmd prompt (similar to xterm)

2021-11-06  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/listings.at: ignore all stderr in listing tests
	  as those are checked via the listing output there

2021-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: workaround for MSYS issues
	* listings-sed.sh: adjusted replacement to actually check the year and
	  convert the final timestamp in default format to ANSI format
	  for matching testsuite reference

2021-08-29   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_file.at: Add more EXTFH test cases

2020-12-20  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at, testsuite.src/run_file.at:
	  moved ASSIGN related tests to run_file.at
	* testsuite.src/run_misc.at: work around bug for CANCEL in test
	  "Recursive CALL of RECURSIVE program" by disabling that side-tests

2020-11-30  James K. Lowden  <jklowden@symas.com>

	* testsuite.src/run_misc.at: correct for 32-bit in
	  "Test dump feature (2)"

2020-11-21  Simon Sobisch <simonsobisch@gnu.org>
